# university_searcher

./: .gitignore  Docker.wsgi.dockerfile  README.md  docker-compose.yml
nginx/: Docker.nginx.dockerfile  nginx.backend.conf
src/: pyproject.toml
src/di/: __init__.py  dev.py
src/settings/: asgi.py  settings.py  wsgi.py
src/universities/: __init__.py  models.py
src/universities/migrations/: 0001_initial.py
src/universities/repo/: __init__.py  universities_repo.py
src/universities/services/: __init__.py  parser.py  repo.py
src/universities/services/universities_base/: universities_base.txt
