[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Grig0ryyy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
